RESOLVED FIXED286511
User installed fonts are not always registered
https://bugs.webkit.org/show_bug.cgi?id=286511
Summary User installed fonts are not always registered
Per Arne Vollan
Reported 2025-01-24 16:22:57 PST
User installed fonts are not always registered because we are doing a case sensitive comparison.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-24 16:23:19 PST
Per Arne Vollan
Comment 2 2025-01-24 16:25:58 PST
EWS
Comment 3 2025-02-01 19:07:28 PST
Committed 289691@main (1a1486ea60b2): <https://commits.webkit.org/289691@main> Reviewed commits have been landed. Closing PR #39527 and removing active labels.
EWS
Comment 4 2025-02-17 11:43:15 PST
Committed 289651.129@safari-7621-branch (ab0a11de0e32): <https://commits.webkit.org/289651.129@safari-7621-branch> Reviewed commits have been landed. Closing PR #2611 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.