User installed fonts are not always registered https://bugs.webkit.org/show_bug.cgi?id=286511 rdar://143598462

Reviewed by Alexey Proskuryakov.

User installed fonts are not always registered because we are doing a case sensitive comparison.

* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::registerUserInstalledFonts):

Canonical link: https://commits.webkit.org/289691@main